--- a/lovely.toml
+++ b/lovely.toml
@@ -3,6 +3,7 @@ version = "1.0.0"
 dump_lua = true
 priority = 0
 
+# Track rFool target
 [[patches]]
 [patches.pattern]
 target = "functions/misc_functions.lua"
@@ -40,3 +41,12 @@ else
   }))
 '''
 match_indent = true
+
+# Save value for rHermit
+#[[patches]]
+#[patches.pattern]
+#target = "functions/misc_functions.lua"
+#pattern = "ease_dollars(G.GAME.current_round.dollars)"
+#position = "after"
+#payload = "G.GAME.last_cash_out = G.GAME.current_round.dollars -- Required for correct behavior on cash out screen"
+#match_indent = true
