--- a/lovely.toml
+++ b/lovely.toml
@@ -43,10 +43,10 @@ else
 match_indent = true
 
 # Save value for rHermit
-#[[patches]]
-#[patches.pattern]
-#target = "functions/misc_functions.lua"
-#pattern = "ease_dollars(G.GAME.current_round.dollars)"
-#position = "after"
-#payload = "G.GAME.last_cash_out = G.GAME.current_round.dollars -- Required for correct behavior on cash out screen"
-#match_indent = true
+[[patches]]
+[patches.pattern]
+target = "functions/misc_functions.lua"
+pattern = "ease_dollars(G.GAME.current_round.dollars)"
+position = "after"
+payload = "G.GAME.last_cash_out = G.GAME.current_round.dollars -- Required for correct behavior on cash out screen"
+match_indent = true
